tutorial/level_2/M3_service_mesh_serverless/1_openshift_service_mesh/manifests/frontend-service.yaml
# Service for the frontend application
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    tutorial-level: "2"
    tutorial-module: "M3"
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
